# diauxic_flux_parity

./: .gitignore  README.md
.github/workflows/: pytest.yaml
code/analysis/: balakrishan2021_comparision.py  example_lag_inference.ipynb  lag_time_scaling.py  physiological_shift_dynamics.py  pilot_diauxic_shift_analysis.py  tRNAc_dynamics_scaling.py  technical_replicate_variability.py
code/exploratory/: averaging_bioreactor_curves.py  coexistence.py  coutilization_lag_times.py  defining_lag_time.py  lag_time_preallocation.py  lag_time_static_suballocation.py  mixed_useless_proteins.py  plate_reader_exploration.py  processing.py
code/figures/: diagram_lag_time.py  lag_time_definition.py  lag_time_useless_fraction.py  preshift_variation.py  static_vs_dynamic_growth.py  useless_expression.py
code/processing/: Balakrishnan2021_processing.py
code/simulations/: lag_time_acclimation_time_congruence.py  lag_time_preallocation.py  lag_time_preshift_variation.py  postshift_K_param_sweep.py  postshift_shifts.py  postshift_sweep.py  relative_overexpression.py  useless_fraction_titration.py
data/bioreactor/: pilot_diauxic_shifts.csv  pilot_lag_times.csv
data/bioreactor_growth/: 2024-04-05_pilot_glucose_acetate_shift.csv  2024-04-09_pilot_glucose_acetate_shift_dilutions.csv  2024-04-10_NCM3722_glucose_dithering.csv
misc/: media_recipes.md
software/: requirements.txt  setup.py
software/diaux/: __init__.py  callbacks.py  data.py  io.py  model.py  pyproject.toml  quant.py  viz.py
software/diaux/package_data/: coli_gene_dict.pkl  strain_database.pkl
(+171 files in other folders)
