[tool.poetry]
name = "diaux"
version = "0.0.1"
description = ""
authors = ["gchure <griffinchure@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
seaborn = "^0.13.2"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
